tests/typecheck/pass/bv_simple_index_t.sail
function [|1|] bv ((bit[64]) x) =
{
  x[63]
}
