tests/typecheck/fail/unsigned_int.sail

function bit[5] test ((bit[5]) x) =
{
  (int) y := x;
  (bit[5]) y
}